# monazite

./: .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: actionlint.yaml  hal_headers.yaml  rust.yaml
bootloader/: Cargo.toml  memory.x
bootloader/.cargo/: config.toml
bootloader/bootmeta/: Cargo.toml
bootloader/bootmeta/src/: lib.rs
bootloader/src/: main.rs
c2a-example/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  package-lock.json  package.json  spaghetti.real.jsonnet  spaghetti.sh  spaghetti.sils.jsonnet  toolchain-monazite.cmake
c2a-example/monazite/: Cargo.toml  chip-description.yaml  memory.x
c2a-example/monazite/.cargo/: config.toml
c2a-example/monazite/src/: main.rs
c2a-example/sils/: Cargo.toml
c2a-example/sils/src/: main.rs
c2a-example/src/: lib.rs
c2a-example/src/src_user/applications/: CMakeLists.txt  app_headers.h  app_registry.c  app_registry.h
c2a-example/src/src_user/applications/component_service/: csrv_adc.c  csrv_adc.h  csrv_aobc.c  csrv_btmgr.c  csrv_btmgr.h  csrv_gpio.c  csrv_gpio.h  csrv_gs.c  csrv_iflash.c  csrv_iflash.h  csrv_ramecc.c  csrv_ramecc.h  csrv_thermometer.c  csrv_thermometer.h  csrv_uart.c  csrv_uart.h  csrv_uart_test.c
c2a-example/src/src_user/applications/user_defined/: tlm_mem_dump.c  tlm_mem_dump.h
c2a-example/src/src_user/component_driver/com/: gs.c  gs.h
c2a-example/src/src_user/hal/: gpio.h
c2a-example/src/src_user/settings/: build_settings.h  port_config.h
c2a-example/src/src_user/settings/component_driver_super/: driver_super_params.h
c2a-example/src/src_user/settings/modes/task_lists/: tl_initial.c
c2a-example/src/src_user/settings/system/: event_handler_params.h  event_logger_params.h
c2a-example/src/src_user/settings/tlm_cmd/: block_command_table_params.h
c2a-example/src/src_user/test/: README.md  pyproject.toml
c2a-example/src/src_user/tlm_cmd/: block_command_definitions.h  command_definitions.c  command_definitions.h  telemetry_definitions.c  telemetry_definitions.h
c2a-example/tlm-cmd-db/CMD_DB/: SAMPLE_MOBC_CMD_DB_BCT.csv  SAMPLE_MOBC_CMD_DB_CMD_DB.csv
c2a-example/tlm-cmd-db/TLM_DB/: SAMPLE_MOBC_TLM_DB_ADC.csv  SAMPLE_MOBC_TLM_DB_BTMGR.csv  SAMPLE_MOBC_TLM_DB_EL.csv  SAMPLE_MOBC_TLM_DB_GPIO.csv  SAMPLE_MOBC_TLM_DB_IFLASH.csv  SAMPLE_MOBC_TLM_DB_RAMECC.csv  SAMPLE_MOBC_TLM_DB_THERMOMETER.csv  SAMPLE_MOBC_TLM_DB_TLM_MEM_DUMP.csv
c2a-example/tlm-cmd-db/TLM_DB/calced_data/: SAMPLE_MOBC_TLM_DB_ADC.csv  SAMPLE_MOBC_TLM_DB_BTMGR.csv  SAMPLE_MOBC_TLM_DB_EL.csv  SAMPLE_MOBC_TLM_DB_GPIO.csv  SAMPLE_MOBC_TLM_DB_IFLASH.csv  SAMPLE_MOBC_TLM_DB_RAMECC.csv  SAMPLE_MOBC_TLM_DB_THERMOMETER.csv  SAMPLE_MOBC_TLM_DB_TLM_MEM_DUMP.csv
c2a-example/tools/: .gitignore  install.sh  probe-rs-wrapper.sh
dev-hal/c2a-monazite-adc-dev/: Cargo.toml
dev-hal/c2a-monazite-adc-dev/src/: lib.rs
dev-hal/c2a-monazite-btmgr-dev/: Cargo.toml
dev-hal/c2a-monazite-btmgr-dev/src/: lib.rs
dev-hal/c2a-monazite-ccsds-dev/: Cargo.toml
dev-hal/c2a-monazite-ccsds-dev/src/: lib.rs
dev-hal/c2a-monazite-gpio-dev/: Cargo.toml
dev-hal/c2a-monazite-gpio-dev/src/: lib.rs
dev-hal/c2a-monazite-iflash-dev/: Cargo.toml
dev-hal/c2a-monazite-iflash-dev/src/: lib.rs
dev-hal/c2a-monazite-ramecc-dev/: Cargo.toml
dev-hal/c2a-monazite-ramecc-dev/src/: lib.rs
dev-hal/c2a-monazite-thermometer-dev/: Cargo.toml
dev-hal/c2a-monazite-thermometer-dev/src/: lib.rs
dev-hal/c2a-monazite-uart-dev/: Cargo.toml
dev-hal/c2a-monazite-uart-dev/src/: lib.rs
dev-hal/c2a-monazite-wdt-dev/: Cargo.toml
dev-hal/c2a-monazite-wdt-dev/src/: lib.rs
flash-algo/: Cargo.toml  README.md  chip-description.yaml  link.x  update.sh
flash-algo/.cargo/: config.toml
flash-algo/src/: bank.rs  lib.rs  mirrored_flasher.rs  one_side_flasher.rs
hal-bind/adc-bind/: Cargo.toml  build.rs
hal-bind/adc-bind/include/: adc.h
hal-bind/adc-bind/src/: bind.rs  lib.rs
hal-bind/atomic-once-cell/: Cargo.toml
hal-bind/atomic-once-cell/src/: lib.rs
hal-bind/btmgr-bind/: Cargo.toml  build.rs
hal-bind/btmgr-bind/include/: btmgr.h
hal-bind/btmgr-bind/src/: bind.rs  lib.rs
hal-bind/ccsds-bind/: Cargo.toml  build.rs
hal-bind/ccsds-bind/include/: ccsds.h
hal-bind/ccsds-bind/src/: bind.rs  lib.rs
hal-bind/gpio-bind/: Cargo.toml  build.rs
hal-bind/gpio-bind/src/: bind.rs  lib.rs
hal-bind/iflash-bind/: Cargo.toml  build.rs
hal-bind/iflash-bind/include/: iflash.h
hal-bind/iflash-bind/src/: bind.rs  lib.rs
hal-bind/ramecc-bind/: Cargo.toml  build.rs
hal-bind/ramecc-bind/include/: ramecc.h
hal-bind/ramecc-bind/src/: bind.rs  lib.rs
hal-bind/thermometer-bind/: Cargo.toml  build.rs
hal-bind/thermometer-bind/include/: thermometer.h
hal-bind/thermometer-bind/src/: bind.rs  lib.rs
hal-bind/uart-bind/: Cargo.toml
hal-bind/uart-bind/src/: lib.rs
hal-bind/wdt-bind/: Cargo.toml
hal-bind/wdt-bind/src/: lib.rs
monazite-rt/: Cargo.toml
monazite-rt/.cargo/: config.toml
monazite-rt/src/: adc.rs  btmgr.rs  ccsds.rs  defmt_rtt.rs  gpio.rs  iflash.rs  lib.rs  macros.rs  perf.rs  pins.rs  ramecc.rs  resources.rs  thermometer.rs  uart.rs  wdt.rs
monazite-rt/src/uart/: direct.rs
monazite-rt/src/uart/direct/: traits.rs
ringbuf/: Cargo.toml
ringbuf/src/: lib.rs
