[workspace]
resolver = "2"

[workspace.dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
stm32h7xx-hal = { version = "0.14.0", features = ["stm32h753v", "defmt", "xspi"] }
stm32h7 = { version = "0.15.1" }
heapless = "0.7.16"
defmt = "0.3.6"
embedded-hal = "0.2.7"

[workspace.lints.clippy]
pedantic = "warn"

[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "warn"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = "0.7.3"
defmt = { workspace = true }
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
stm32h7xx-hal = { workspace = true }
bootmeta = { path = "./bootmeta" }
fugit = "0.3.7"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "z" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "z" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "z" # <-
overflow-checks = false # <-
