[workspace]
resolver = "2"

[workspace.dependencies]
cortex-m = "0.7.7"
stm32h7xx-hal = { version = "0.14.0", features = ["stm32h753v", "defmt", "xspi"] }
stm32h7 = { version = "0.15.1" }
heapless = "0.7.16"
defmt = "0.3.6"
embedded-hal = "0.2.7"
nb = "1.1.0"

[workspace.lints.clippy]
pedantic = "warn"

[package]
name = "monazite-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rtt-target = "0.4.0"
defmt = { workspace = true }
defmt-rtt-target = "0.3.0"
stm32h7xx-hal = { workspace = true }
rtic = { version = "2.0.0", features = ["thumbv7-backend"] }
c2a-core = "4.3.0"
ringbuf = { path = "../ringbuf", features = ["defmt"] }
heapless = { workspace = true }
stable_deref_trait = { version = "1.2.0", default-features = false }
bootmeta = { path = "../bootloader/bootmeta" }
atomic-once-cell = { path = "../hal-bind/atomic-once-cell" }
nb = { workspace = true }
seq-macro = "0.3"

c2a-monazite-adc-bind = { path = "../hal-bind/adc-bind" }
c2a-monazite-btmgr-bind = { path = "../hal-bind/btmgr-bind" }
c2a-monazite-ccsds-bind = { path = "../hal-bind/ccsds-bind" }
c2a-monazite-gpio-bind = { path = "../hal-bind/gpio-bind" }
c2a-monazite-iflash-bind = { path = "../hal-bind/iflash-bind" }
c2a-monazite-ramecc-bind = { path = "../hal-bind/ramecc-bind" }
c2a-monazite-thermometer-bind = { path = "../hal-bind/thermometer-bind" }
c2a-monazite-uart-bind = { path = "../hal-bind/uart-bind" }
c2a-monazite-wdt-bind = { path = "../hal-bind/wdt-bind" }
