[package]
name = "bootmeta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
cortex-m = { workspace = true }
stm32h7xx-hal = { workspace = true }
stm32h7 = { workspace = true }
