[package]
name = "c2a-monazite-uart-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
c2a-monazite-uart-bind = { workspace = true }
futures = "0.3"
kble-socket = { version = "0.3.0", features = ["axum"] }
tokio = { version = "1", features = ["sync", "rt"] }
axum = { version = "0.6", default-features = false, features = ["tokio", "http1", "ws"] }
anyhow = "1"
