[package]
name = "c2a-monazite-iflash-bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
c2a-core.workspace = true
atomic-once-cell = { workspace = true }
nb = "1.1.0"

[build-dependencies]
c2a-bind-utils.workspace = true
